--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -12,4 +12,83 @@ body {
   line-height: 1.5;
 }
 
+main {
+  padding-top: 80px; 
+  position: relative;
+}
 
+header {
+  
+  padding: 20px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  background-color: #274e64;
+  z-index: 999;
+}
+
+.search-form {
+  text-align: center;
+}
+
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 20px;
+}
+
+img {
+  display: block;
+  width: 300px;
+}
+
+.load-more {
+  margin-top: 20px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.photo-card {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.photo-card img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.photo-card .info {
+  display: flex;
+  align-items: center;
+  text-align: center;
+}
+
+.info {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+}
+
+.info-item {
+  text-align: center;
+}
+
+button{
+  
+    background-color: #2196f3;;
+    
+    
+    cursor: pointer;
+    border: none;
+    padding: 10px ;
+    border-radius: 4px;
+   
+}
